# llm_client_redis

./: .gitignore  README.md  pyproject.toml  requirements.txt  uvicron_start.bat
.github/workflow/: pypi-publish.yml
config/: config.ini  llm_resources.json
demos/: demo_extra_body.py
llm_client_redis/: __init__.py  chat_session_main.py  llm_client.py
llm_client_redis/cmd_chat/: chat_session.py  command_def.py
llm_client_redis/cmd_chat/cmd_templates/: __init__.py  send_template_cmd.py  show_text_block_cmd.py
llm_client_redis/tools/: llm_redis_manager.py  llm_resources_tools.py  output_tools.py
src/llm_client_redis/: chat_session_main.py  llm_client.py  llm_client_dir_sender_main.py  llm_client_dirs_watcher_main.py  llm_context_client_dirs_watcher_main.py  llm_restful_client_main.py
src/llm_client_redis/cmd_chat/: __init__.py  chat_session.py  command_def.py
src/llm_client_redis/cmd_chat/cmd_templates/: send_template_cmd.py  show_text_block_cmd.py  text_block_command.py
src/llm_client_redis/tools/: __init__.py  init_config_tools.py  llm_redis_manager.py  llm_resources_tools.py  output_tools.py  time_controller.py
test/: unit_test_llm_repeator_redis.py  unit_test_redis_read_manager.py
tests/: restful_api.py  unit_test_create_config_file.py  unit_test_llm_repeator_redis.py  unit_test_redis_read_manager.py  unit_test_restful_client.py
